[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Sprites/Grasshopper/GrasshopperSheet.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Grasshopper.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 18 )

[sub_resource type="Animation" id=3]
resource_name = "Crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.1
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shoot"
length = 0.8
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.266667, 0.433333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4 ]
}

[node name="Hopshot" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -30 )
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -18 )
shape = SubResource( 1 )

[node name="AttackCheck" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 17

[node name="AttackCheckColl" type="CollisionShape2D" parent="AttackCheck"]
position = Vector2( 0, -18 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Shoot = SubResource( 7 )

[connection signal="area_entered" from="AttackCheck" to="." method="_on_AttackCheck_area_entered"]
[connection signal="area_exited" from="AttackCheck" to="." method="_on_AttackCheck_area_exited"]
